--- a/main.html
+++ b/main.html
@@ -1,22 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-	<meta content="utf-8" http-equiv="encoding">
-	<title> </title>
+	<title> Tetris game </title>
+	<link rel="stylesheet" type="text/css" href="tetris.css">
 </head>
+<body>
 
-<script  defer src="myJs.js"></script> 
-<link rel="stylesheet" type="text/css" href="style.css">
-<body >
-
-
-	<canvas class="canvas" id="canvas"></canvas>
-
-
-
-
-
-
+<canvas id="tetris" width="200" height="400"> </canvas>
+ <script src="tetrominoes.js"></script>
+<script src="tetris.js"></script>
 </body>
 </html>
